--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   fluttertoast: ^8.2.2
+  bloc_test: ^9.1.5
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,19 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  integration_test:
+    sdk: flutter
+
+    # The "flutter_lints" package below contains a set of recommended lints to
+    # encourage good coding practices. The lint set provided by the package is
+    # activated in the `analysis_options.yaml` file located at the root of your
+    # package. See that file for information about deactivating specific lint
+    # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  mocktail: ^1.0.1
+  flutter_driver:
+    sdk: flutter
+  test: ^1.24.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
