--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  fluttertoast: ^8.2.2
+  fluttertoast: ^8.2.3
   bloc_test: ^9.1.5
+  dio: ^5.3.3
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -75,8 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
