--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bloc_test: ^9.1.5
   dio: ^5.3.3
   flutter_easyloading: ^3.0.5
+  cool_alert: ^2.0.1
 
 dev_dependencies:
   flutter_test:
