--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   cool_alert: ^2.0.1
   mocktail: ^1.0.1
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
